--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Poppins", sans-serif;
-  color: #a8a8a8;
+  color: #8c8890;
   background-image: url("\img\mayslogo.jpg");
 }
 
